--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
   }
   
   /* KEYFRAMES */
+    /* KEYFRAMES */
   @keyframes fade-up {
     0% {
       opacity: 0;
@@ -65,10 +66,6 @@
   
   .u-bolder {
     font-weight: 700;
-  }
-  
-  .u-yellow {
-    color: #FFD600;
   }
 
   .u-blue {
